--- a/HTMLactive/two.html
+++ b/HTMLactive/two.html
@@ -1,56 +1,57 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-       table{
+      table {
         border-collapse: collapse;
-       }
-       th,td{
+      }
+
+      th,
+      td {
         border: 2px solid #222;
-       }
+      }
     </style>
-</head>
-<body>
+  </head>
+
+  <body>
     Tables
     <div class="table-container">
-
-        <table>
-            <thead>
-                <tr>
-                    <th colspan="2">Wine festival</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><strong>TIME</strong></td>
-                    <td><strong>EVENT</strong></td>
-                </tr>
-                <tr>
-                    <td>12:00 PM</td>
-                    <td>WELCOME RECEPTION</td>
-                </tr>
-                <tr>
-                    <td>01:00 PM</td>
-                    <td>STORYTELLING AND TASTING</td>
-                </tr>
-                <tr>
-                    <td>02:00 PM</td>
-                    <td>WINE LUNCHEON</td>
-                </tr>
-                <tr>
-                    <td>03:00 PM</td>
-                    <td>AGUILAR FAMILY WINES</td>
-                </tr>
-                <tr>
-                    <td>04:00 PM</td>
-                    <td>WINE AND CHEESE TESTING</td>
-                </tr>
-            </tbody>
-        </table>
+      <table>
+        <thead>
+          <tr>
+            <th colspan="2">Wine festival</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><strong>TIME</strong></td>
+            <td><strong>EVENT</strong></td>
+          </tr>
+          <tr>
+            <td>12:00 PM</td>
+            <td>WELCOME RECEPTION</td>
+          </tr>
+          <tr>
+            <td>01:00 PM</td>
+            <td>STORYTELLING AND TASTING</td>
+          </tr>
+          <tr>
+            <td>02:00 PM</td>
+            <td>WINE LUNCHEON</td>
+          </tr>
+          <tr>
+            <td>03:00 PM</td>
+            <td>AGUILAR FAMILY WINES</td>
+          </tr>
+          <tr>
+            <td>04:00 PM</td>
+            <td>WINE AND CHEESE TESTING</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-</body>
+  </body>
 </html>
