--- a/cssAddictive/4_flex/temp.html
+++ b/cssAddictive/4_flex/temp.html
@@ -16,18 +16,19 @@
             background-color: lightcyan;
             display: flex;
             flex-direction:row;
-            justify-content: space-evenly;
-            align-items:flex-start;
+            justify-content: center;
+            align-items:center;
             flex-wrap:wrap;
+            gap:20px; 
         }
         .box{
             border: 2px solid goldenrod;
             background-color: lightsalmon;
         }
-       
-        .b3{
-            flex-shrink:4;
-        }
+       .b1{
+        order:1;
+       }
+        
     </style>
 </head>
 <body>
